--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -710,16 +710,16 @@
                 "-lr", "1e-4", 
                 "--model", "POMELO_module", 
                 "--head", "v3", 
-                // "--grouped",
-                // "-l", "log_l1_loss",
-                "-l", "l1_loss",
+                "--grouped",
+                "-l", "log_l1_loss",
+                // "-l", "l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                // "-esr2", "0.1", 
+                "-esr2", "0.1", 
                 "-dw","2", 
                 "-S2",
                 "-NIR",
-                // "-S1",
+                "-S1",
                 "-f",
                 // "16",
                 "8",
@@ -1334,20 +1334,19 @@
             "args": [
                 "--model", "POMELO_module",
                 "--head", "v3",
-                "--grouped",
+                // "--grouped",
                 "--occupancymodel",
                 "--buildinginput",
                 "--useposembedding",
                 "--sentinelbuildings",
-                "-dw","3",
+                "-dw","2",
                 "-S2",
                 "-NIR",
-                "-S1",
-                // "-NIR",
+                // "-S1",
                 "-f", "8",
                 "-rse",
-                "-treg", "pricp2", "rwa",
-                "--resume", "/scratch2/metzgern/Downloads/experiment_288_266/last_model.pth"
+                "-treg", "rwa", "rwa2022",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth"
             ]
         },
         {
