--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -707,15 +707,16 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-4", 
+                "-lr", "1e-3", 
                 "--model", "POMELO_module", 
                 "--head", "v3", 
-                "--grouped",
+                // "--grouped",
                 "-l", "log_l1_loss",
                 // "-l", "l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "-esr2", "0.1", 
+                // "-esr2", "0.1", 
+                "--empty_eps", "0.1",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -1346,6 +1347,7 @@
                 "-f", "8",
                 "-rse",
                 "-treg", "rwa", "rwa2022",
+                "--train_level", "coarse", "coarse",
                 "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1855_904/last_model.pth"
             ]
         },
