up sync git push

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -715,8 +715,8 @@
                 // "-l", "l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                // "-esr2", "0.1", 
-                "--empty_eps", "0.1",
+                "-esr2", "0.1", 
+                "--empty_eps", "0.01",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
