--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -716,8 +716,8 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "-esr2", "0.1", 
-                "--empty_eps", "0.01",
-                "-dw","2", 
+                "--empty_eps", "0.1",
+                "-dw","1", 
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -726,7 +726,7 @@
                 "8",
                 // "--dilation", "2",
                 "-rse",
-                "-treg", "rwa2022", "rwa",
+                "-treg", "rwa",
                 //"-treg", "pricp2",
                 "-tregtrain", "rwa2022",
                 "-exZH",
