--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -716,7 +716,8 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "--empty_eps", "0.01",
-                "-esr2", "0.001", 
+                // "--lempty_eps", "0.01",
+                "-esr2", "0.1", 
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -1043,7 +1044,7 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-4", 
+                "-lr", "1e-3", 
                 "--model", "POMELO_module",  
                 "--head", "v3",
                 // "--grouped",
@@ -1098,7 +1099,7 @@
                 // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
-                "--train_level", "fineTRACTCE",
+                "--train_level", "coarseTRACTCE",
                 // "--weak_validation",
                 "--useposembedding",
                 // "--val_every_i_steps", "1200",
