remove dependency on coarseTRACTCE20 for puerto rico

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -770,7 +770,7 @@
                 "-la", "1.0",
                 "--empty_eps", "0.01",
                 // "--lempty_eps", "0.01",
-                "-esr2", "0.1", 
+                "-sreg", "0.1", 
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -811,7 +811,7 @@
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--weightdecay", "0.0",
-                "--weightdecay_unet", "1e-6",
+                "--weightdecay_unet", "0.000001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 // "-r77",
