--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -760,9 +760,9 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module", 
-                "--head", "v6", 
+                "--head", "v3", 
                 // "--grouped",
                 "-l", "log_l1_loss",
                 // "-l", "l1_loss",
@@ -770,7 +770,7 @@
                 "-la", "1.0",
                 "--empty_eps", "0.01",
                 // "--lempty_eps", "0.01",
-                "-sreg", "0.1", 
+                "-sreg", "0.01", 
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -814,6 +814,78 @@
                 "--weightdecay_unet", "0.000001",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
+                // "-r77",
+                "--pretrained",
+                // "--gradientaccumulation",
+            ]
+        },
+        {
+            "name": "train, Stage 1, rwa2022,2020 -> 2020",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-4", 
+                "--model", "POMELO_module", 
+                "--head", "v3", 
+                // "--grouped",
+                "-l", "log_l1_loss",
+                // "-l", "l1_loss",
+                // "-la", "1.0", "1.0",
+                "-la", "1.0",
+                "--empty_eps", "0.01",
+                // "--lempty_eps", "0.01",
+                "-sreg", "0.01", 
+                "-dw","2", 
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "rwa2022", "rwa",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.825",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--ascAug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100", 
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                // "--weak_merge_aug",
+                "--occupancymodel",
+                "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                "--weightdecay", "0.0",
+                "--weightdecay_unet", "0.000001",
+                "--sentinelbuildings",
+                "--train_level", "coarse", "coarse",
                 // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
