sync before refactoring

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -699,11 +699,12 @@
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "-esr2", "0.1", 
+                "--empty_eps", "0.01",
+                "-sreg", "0.01",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
-                // "-S1",
+                "-S1",
                 "-f",
                 // "16",
                 "8",
@@ -732,8 +733,8 @@
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "2",
-                "--weak_merge_aug",
+                "--weak_batch_size", "4",
+                // "--weak_merge_aug",
                 "--occupancymodel",
                 "--buildinginput",
                 // "--segmentationinput",
@@ -742,9 +743,9 @@
                 "--weightdecay", "0.0",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
-                // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
+                "--val_every_n_epochs", "2"
             ]
         },
         {
