--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -711,11 +711,8 @@
                 "-b", "16",
                 "-lr", "1e-4", 
                 "--model", "POMELO_module", 
-                "--head", "v3", 
-                // "-fe", "mobileone_s0",
-                // "--grouped",
-                "-l", "log_l1_loss",
-                // "-la", "1.0", "1.0",
+                "--head", "v3",  
+                "-l", "log_l1_loss", 
                 "-la", "1.0",
                 "--empty_eps", "0.01",
                 "-sreg", "0.01",
@@ -724,38 +721,28 @@
                 "-NIR",
                 "-S1",
                 "-f",
-                // "16",
                 "4",
-                // "--dilation", "2",
                 "-rse",
-                "-treg", "rwa",
-                //"-treg", "pricp2",
+                "-treg", "rwa", 
                 "-tregtrain", "rwa",
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                // "--lr_gamma", "0.825",
                 "--lr_gamma", "0.75",
-                "--full_aug",
-                // "--ascAug",
+                "--full_aug", 
                 "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100", 
-                "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "2",
-                "--val_every_n_epochs", "2",
-                // "--test_every_i_steps", "50",
-                // "--val_every_n_epochs", "100",
+                "--nomain", 
+                "--val_every_n_epochs", "2", 
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
+                "--weak_batch_size", "4",
                 // "--weak_merge_aug",
                 "--occupancymodel",
                 "--buildinginput",
-                // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--weightdecay", "0.0",
@@ -764,9 +751,65 @@
                 "--train_level", "coarse",
                 "--pretrained",
                 // "--dropout", "0.5",
-                "--addgaussiannoise",
-                // "--half"
-                // "--gradientaccumulation", 
+                // "--addgaussiannoise",
+            ]
+        },
+        {
+            "name": "train, Stage 1, uga",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-4", 
+                "--model", "POMELO_module", 
+                "--head", "v3",  
+                "-l", "log_l1_loss", 
+                "-la", "1.0",
+                "--empty_eps", "0.01",
+                "-sreg", "0.01",
+                "-dw","2", 
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                "4",
+                "-rse",
+                "-treg", "uga", 
+                "-tregtrain", "uga",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug", 
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100", 
+                "--nomain", 
+                "--val_every_n_epochs", "2", 
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "2",
+                // "--weak_merge_aug",
+                "--occupancymodel",
+                "--buildinginput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                "--weightdecay", "0.0",
+                "--weightdecay_unet", "0.00002",
+                "--sentinelbuildings",
+                "--train_level", "coarse",
+                "--pretrained",
+                // "--dropout", "0.5",
+                // "--addgaussiannoise",
             ]
         },
         {
