implement sparse unet forwarding

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -772,7 +772,7 @@
                 "--head", "v3",  
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                "--empty_eps", "0.01",
+                // "--empty_eps", "0.01",
                 "-sreg", "0.01",
                 "-dw","2", 
                 "-S2",
@@ -795,7 +795,7 @@
                 "--supmode", "weaksup",
                 "--lam_weak", "100", 
                 "--nomain", 
-                "--val_every_n_epochs", "2", 
+                "--val_every_n_epochs", "1", 
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "2",
                 // "--weak_merge_aug",
