proper commands for sparse unet and limits

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -772,7 +772,8 @@
                 "--head", "v3",  
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                // "--empty_eps", "0.01",
+                "--empty_eps", "0.00",
+                "--sparse_unet",
                 "-sreg", "0.01",
                 "-dw","2", 
                 "-S2",
