sync building creation and skip nan bug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1387,20 +1387,20 @@
                 "-b", "16",
                 "-lr", "1e-4", 
                 "--model", "POMELO_module",  
-                "--head", "v3",
-                "--grouped",
+                "--head", "v3", 
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
-                "-esr2", "0.1",
+                "--empty_eps", "0.01",
+                "-sreg", "0.01",
                 "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
                 "-f",
                 // "16",
-                "8",
+                "4",
                 // "--dilation", "2",
                 "-rse",
                 "-treg", "che",
@@ -1412,7 +1412,7 @@
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
-                "--num_workers", "6", 
+                "--num_workers", "4", 
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
@@ -1426,24 +1426,20 @@
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
+                "--weak_batch_size", "4",
                 "--occupancymodel",
                 "--buildinginput",
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
-                "--weightdecay_unet", "0.00001",
-                // "--val_every_i_steps", "5000",
-                "--sentinelbuildings",
-                // "-r77",
+                "--weightdecay_unet", "0.000001", 
+                "--sentinelbuildings", 
                 "--pretrained",
                 // "--gradientaccumulation",
                 "--train_level", "coarse4",
                 // "--weak_validation",
-                "--useposembedding",
-                // "--val_every_i_steps", "1200",
-                // "--test_every_i_steps", "400",
-                "--max_weak_pix", "1000000"
+                // "--useposembedding", 
+                // "--max_weak_pix", "1000000"
             ]
         },
         {
