--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -772,7 +772,7 @@
                 "--head", "v3",  
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
-                "--empty_eps", "0.00",
+                "--empty_eps", "0.01",
                 "--sparse_unet",
                 "-sreg", "0.01",
                 "-dw","2", 
@@ -809,8 +809,75 @@
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
+                "--limit1", "19000000",
+                "--limit2", "25000000",
+                "--limit3", "35000000",
+                "--max_weak_pix", "35000000",
+                "--max_pix_box", "35000000"
+            ]
+        },
+        {
+            "name": "train, Stage 1, afg",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-4", 
+                "--model", "POMELO_module", 
+                "--head", "v3",  
+                "-l", "log_l1_loss", 
+                "-la", "1.0",
+                "--empty_eps", "0.01",
+                "--sparse_unet",
+                "-sreg", "0.01",
+                "-dw","2", 
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                "4",
+                "-rse",
+                "-treg", "afg", 
+                "-tregtrain", "afg",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug", 
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100", 
+                "--nomain", 
+                "--val_every_n_epochs", "1", 
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                // "--weak_merge_aug",
+                "--occupancymodel",
+                "--buildinginput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                "--weightdecay", "0.0",
+                "--weightdecay_unet", "0.00002",
+                "--sentinelbuildings",
+                "--train_level", "coarse",
+                "--pretrained",
+                "--limit1", "19000000",
+                "--limit2", "25000000",
+                "--limit3", "35000000",
                 // "--dropout", "0.5",
                 // "--addgaussiannoise",
+                "--max_weak_pix", "35000000",
+                "--max_pix_box", "35000000"
             ]
         },
         {
