upload syntetic admin area creation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1454,10 +1454,8 @@
                 "-b", "16",
                 "-lr", "1e-4", 
                 "--model", "POMELO_module",  
-                "--head", "v3", 
-                // "-l", "log_l1_loss", "L1reg", 
+                "--head", "v3",
                 "-l", "log_l1_loss",
-                // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "--empty_eps", "0.01",
                 "-sreg", "0.01",
@@ -1466,17 +1464,13 @@
                 "-NIR",
                 "-S1",
                 "-f",
-                // "16",
                 "4",
-                // "--dilation", "2",
                 "-rse",
                 "-treg", "che",
-                //"-treg", "pricp2",
                 "-tregtrain", "che",
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "4", 
@@ -1493,20 +1487,23 @@
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "4",
+                "--weak_batch_size", "2",
                 "--occupancymodel",
-                "--buildinginput",
-                // "--segmentationinput",
+                "--buildinginput", 
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
-                "--weightdecay_unet", "0.000001", 
-                // "--sentinelbuildings", 
-                "--pretrained",
-                // "--gradientaccumulation",
-                "--train_level", "coarse4",
-                // "--weak_validation",
-                // "--useposembedding", 
-                // "--max_weak_pix", "1000000"
+                "--weightdecay_unet", "0.00001", 
+                "--sentinelbuildings", 
+                "--pretrained", 
+                "--train_level", "coarse4synt400",
+                "--limit1", "19000000",
+                "--limit2", "25000000",
+                "--limit3", "35000000",
+                // "--dropout", "0.5",
+                // "--addgaussiannoise",
+                "--max_weak_pix", "35000000",
+                "--max_pix_box", "35000000",
+                "--sparse_unet"
             ]
         },
         {
