--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -738,11 +738,10 @@
                 "--lam_weak", "100", 
                 "--nomain", 
                 "--val_every_n_epochs", "1", 
-                // "--weak_batch_size", "4",
                 "--weak_batch_size", "4",
                 // "--weak_merge_aug",
-                // "--occupancymodel",
-                // "--buildinginput",
+                "--occupancymodel",
+                "--buildinginput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--weightdecay", "0.0",
