--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -749,6 +749,7 @@
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
+                "--limit2", "18000000",
                 // "--dropout", "0.5",
                 // "--addgaussiannoise",
             ]
