DDA feature extractor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -712,6 +712,7 @@
                 "-lr", "1e-4", 
                 "--model", "POMELO_module", 
                 "--head", "v3",  
+                "--feature_extractor", "DDA",
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
                 "--empty_eps", "0.01",
@@ -738,7 +739,7 @@
                 "--lam_weak", "100", 
                 "--nomain", 
                 "--val_every_n_epochs", "1", 
-                "--weak_batch_size", "4",
+                "--weak_batch_size", "2",
                 // "--weak_merge_aug",
                 "--occupancymodel",
                 "--buildinginput",
@@ -749,9 +750,12 @@
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
-                "--limit2", "18000000",
+                "--limit1", "6000000",
+                "--limit2", "10000000",
+                "--limit2", "13000000",
                 // "--dropout", "0.5",
                 // "--addgaussiannoise",
+                "--sparse_unet"
             ]
         },
         {
@@ -1198,7 +1202,7 @@
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
-                "--seed", "1612",
+                "--seed", "1610",
                 "-gc", "0.001",
                 // "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
@@ -1263,7 +1267,7 @@
                 // "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
-                "--seed", "1612",
+                "--seed", "1610",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 // "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1522_224/",
@@ -1332,7 +1336,7 @@
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
-                "--seed", "1612",
+                "--seed", "1610",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1775_557/last_model.pth",
                 "--supmode", "weaksup",
@@ -1406,7 +1410,7 @@
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
-                "--seed", "1612",
+                "--seed", "1610",
                 "-gc", "0.01",
                 "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1754_100/last_model.pth",
                 "--resume_extractor", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1754_100/last_model.pth",
@@ -1474,7 +1478,7 @@
                 "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "4", 
-                "--seed", "1612",
+                "--seed", "1610",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 "--supmode", "weaksup",
