sync upload DDA feature extraction

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -735,6 +735,7 @@
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2200_573/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100", 
                 "--nomain", 
@@ -744,8 +745,8 @@
                 "--occupancymodel",
                 "--buildinginput",
                 "--useposembedding",
-                "--weightdecay_pos", "0.0",
-                "--weightdecay", "0.0",
+                "--weightdecay_pos", "0.0001",
+                "--weightdecay", "0.0001",
                 "--weightdecay_unet", "0.00002",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
