upload new trainable conv code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -735,7 +735,7 @@
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2201_422/last_model.pth",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_2201_422/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100", 
                 "--nomain", 
@@ -751,8 +751,8 @@
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
-                "--limit1", "6000000",
-                "--limit2", "10000000",
+                "--limit1", "9000000",
+                "--limit2", "9000000",
                 "--limit2", "13000000",
                 // "--dropout", "0.5",
                 // "--addgaussiannoise",
