--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -716,7 +716,7 @@
                 "-l", "log_l1_loss", 
                 "-la", "1.0",
                 "--empty_eps", "0.01",
-                "-sreg", "0.02",
+                "-sreg", "0.05",
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -744,10 +744,10 @@
                 // "--weak_merge_aug",
                 "--occupancymodel",
                 "--buildinginput",
-                "--useposembedding",
+                // "--useposembedding",
                 "--weightdecay_pos", "0.001",
                 "--weightdecay", "0.001",
-                "--weightdecay_unet", "0.002",
+                "--weightdecay_unet", "0.005",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 "--pretrained",
